2010-12-17  Christian Kauhaus <kc@gocept.com>

	* Fix output of large decimal numbers #8440.
	* Doctest for check_users #7915.

2010-10-11  Christian Kauhaus  <kc@gocept.com>

	* Fix missing HISTORY.txt in sdist.

2010-09-21  Christian Kauhaus <kc@gocept.com>

	* Fix missing version.txt in sdist #7925.
	* Write multiple measures guide #7914.
	* Write cookies guide #7914.
	* Clean up documentation.

2010-08-17  Christian Kauhaus <kc@gocept.com>

	* Initial public release.
	* Clean up code.
	* Improve README.txt.